# discord-bot

./: .gitignore  .replit  LICENSE  README.md  bot.py  bot_ext.py  bot_linux.py  bot_windows.py  list.json  main.py  pyproject.toml  requirements.txt  school_meal.py  weather.py
Cogs/: Music.py  MusicChart.py  SDXL.py  StableDiffusion.py  Vision.py  Weather.py  cogtest.py
Test/: Test.py  youtube.html
discord-env/: pyvenv.cfg
discord-env/Scripts/: activate  activate.bat
