[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["resc863"]
description = "Discord Bot"
license = "MIT License"
name = "discord-bot"
version = "0.2.1"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
discord = "^1.0.1"
"discord.py" = "^1.7.2"
ffmpeg = "^1.4"
psutil = "^5.8.0"
python = "^3.8"
requests = "^2.25.1"
youtube-dl = "^2021.5.16"
pynacl = "^1.4.0"
[tool.poetry.dev-dependencies]
